2006-08-12 Harri Pitkänen  <hatapitk@iki.fi>

	* Do not suggest splitting a word or adding a hyphen in certain
	  cases where there already is an other hyphen nearby.

2006-07-26 Harri Pitkänen  <hatapitk@iki.fi>

	* Add -no-undefined to libvoikko_la_LDFLAGS, which is supposed to
	  enable building shared libraries on Windows.

2006-07-25 Harri Pitkänen  <hatapitk@iki.fi>

	* Increase version to 1.0

2006-07-03 Harri Pitkänen  <hatapitk@iki.fi>

	* Fix the previous fix for character insertion suggestions
	* Fix a bug and optimise character duplication suggestions

2006-06-26 Harri Pitkänen  <hatapitk@iki.fi>

	* Fix a bug in character insertion suggestions

2006-06-17 Harri Pitkänen  <hatapitk@iki.fi>

	* Do not hyphenate between vowels in voikko_simple_hyphenation if
	  VOIKKO_OPT_NO_UGLY_HYPHENATION is set
	* Remove warning about unimplemented VOIKKO_OPT_NO_UGLY_HYPHENATION
	  in voikko.h (it was first implemented on 2006-05-24)
	* Suggest replacing s with š and z with ž rather than sh and zh.
	* If a suggestion cannot be represented in the external encoding, drop only
	  that suggestion instead of returning null immediately.

2006-06-06 Harri Pitkänen  <hatapitk@iki.fi>

	* Improve character insertion suggestions

2006-06-01  Harri Pitkänen  <hatapitk@iki.fi>

	* Add error recovery and fix some related bugs
	* Increase version to 0.9

2006-05-30  Kai Solehmainen  <kai.solehmainen@oikeatoliot.fi>

	* nl_langinfo() ported for Windows version.
	* Dictionary path is searched from Windows registry:
		- first from HKEY_CURRENT_USER\SOFTWARE\Voikko\DictionaryPath
		- and then if not found from HKEY_LOCAL_MACHINE\SOFTWARE\Voikko\DictionaryPath 
	* Minor changes for Windows version. 

2006-05-30  Harri Pitkänen  <hatapitk@iki.fi>

	* Suggestions are sorted by estimated correctness:
	  compound suggestions and suggestions that contain both letter
	  and case changes are given lower priority.

2006-05-29  Harri Pitkänen  <hatapitk@iki.fi>

	* Character deletion suggestions